# cclog

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  changelog.md
.github/workflows/: build.yml  ci.yml  release.yml
cli/: CHANGELOG.md  Cargo.toml
cli/src/: cli.rs  error.rs  fmt.rs
crates/clog-cli/: Cargo.toml
lib/: CHANGELOG.md  Cargo.toml  README.md
lib/src/: clog.rs  config.rs  error.rs  git.rs  link_style.rs  sectionmap.rs
lib/src/fmt/: json_writer.rs  md_writer.rs
src/: clog.rs
