[package]
repository = "https://github.com/clog-tool/clog-lib"
readme = "README.md"
keywords = ["git", "log", "changelog", "parser", "parse"]
license = "MIT"
name = "clog"
edition = "2024"
version = "0.11.0"
rust-version = "1.85.0" # MSRV (Rust 2024 edition)
authors = ["Christoph Burgdorf <christoph.burgdorf@bvsn.org>"]
description = "A conventional changelog for the rest of us"
exclude = ["docs/*"]

[dependencies]
indexmap = { version = "2", features = ["serde"] }
regex = "1"
toml = "0.8"
time = { version = "0.3", features = ["formatting"] }
thiserror = "2"
strum = { version = "0.27", features = ["derive"] }
log = "0.4"
serde = { version = "1", features = ["derive"] }

[features]
default = []
debug = [] # For debugging output
unstable = []
