[package]
name = "cclog"
version = "0.12.0"
edition = "2024"
rust-version = "1.85.0"
authors = [
    "Christoph Burgdorf <christoph.burgdorf@bvsn.org>",
    "Sebastian Mandrean <sebastian.mandrean@gmail.com>",
]
description = "A conventional changelog for the rest of us"
repository = "https://github.com/mandrean/cclog"
readme = "README.md"
keywords = ["git", "log", "changelog", "parser", "parse"]
license = "MIT"
exclude = ["docs/*"]

[dependencies]
indexmap = { version = "2", features = ["serde"] }
regex = "1"
toml = "0.8"
time = { version = "0.3", features = ["formatting"] }
thiserror = "2"
strum = { version = "0.27", features = ["derive"] }
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = []
debug = [] # For debugging output
unstable = []
